# advance_controller

./: .gitattributes  CMakeLists.txt  DEBUG_IMPLEMENTATION_SUMMARY.md  DEBUG_SYSTEM.md  DEBUG_SYSTEM_STATUS.md  MEMORY_LEAK_ANALYSIS.md  README.md  convert_printf.sh  custom_partitions.csv  printf_conversion_progress.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ui/: CMakeLists.txt  filelist.txt  my_global_lib.c  my_global_lib.h  my_wifi.c  my_wifi.h  nvs_helper.c  nvs_helper.h  safe_page.c  safe_page.h  transaction.c  transaction.h  ui.c  ui.h  ui_events.c  ui_events.h  usr_k2_lan.c  usr_k2_lan.h
components/ui/images/: ui_img_190791346.c  ui_img_background_moderen_png.c  ui_img_img2_png.c  ui_img_img4_png.c  ui_img_wifi_cross_png.c
components/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen4.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
references/ESP32-2432S028/: pinout-lcd.txt
templates/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c
templates/images/: ui_img_1944009510.c  ui_img_4_png.c  ui_img_5_png.c  ui_img_img1_png.c  ui_img_img3_png.c  ui_img_menerima_semua_payment_yang_dapat_menggunakan_qris_png.c
templates/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.c
